Linkedin: https://www.linkedin.com/in/robson-vaamonde-0b029028/
Instagram: https://www.instagram.com/procedimentoem/?hl=pt-br
Data de criação: 10/10/2021
Data de atualização: 14/01/2022
Versão: 0.30
Testado e homologado para a versão do Ubuntu Server 20.04.x LTS x64

============================================= ATUALIZAÇÕES DOS SCRIPTS =============================================
14/01/2022 - Robson Vaamonde - Criação dos script: 33-asterisk.sh, customização dos seus arquivos de configuração e
atualização para a nova versão: 19.1.x., acréscimo da dependência: php-soap no arquivo: 00-paramentros.sh referente
a Loja Virtual do Wordpress reportado pelo Prof. José de Assis.

13/01/2022 - Robson Vaamonde - Criação do arquivo PORTS com especificações das Portas TCP e UDP dos Serviços de Rede
utilizados pelos Scripts, atualização do versão do OpenFire para: 4.67, alteração da versão do ownCloud para o arquivo
latest.tar.bz2, atualização do arquivo: 11-wordpress.sh alteração do nome do arquivo de download para: wordpress.zip
correção da localização do arquivo: wp-config.php na hora de aplicar o Salt, acréscimo da listagem TCP da porta 514
no script: 14-loganalyzer.sh, acréscimo da edição do arquivo PHP no script: 25-owncloud.sh, atualização da versão do 
Perl: 5.30.0 no arquivo: zz-ocsinventory-restapi.conf, acréscimo da porta 6379 do Redis Server no script: 23-ntopng.sh

12/01/2022 - Robson Vaamonde - Acréscimo da linha: add-apt-repository restricted em todos os scripts do curso, 
acréscimo das opções do serviço do NFS no arquivo: hosts.allow.

11/01/2022 - Robson Vaamonde - Correção dos Bugs referente ao uso do Wordpress que foram reportados pelo Prof. José
de Assis, correções dos arquivos: 00-parametros.sh, 00-default.conf, htaccess, wordpress.conf e wp-config.php, 
criação dos scripts: salt.sh e updateip.sh como ferramenta de suporte ao Wordpress.

10/01/2022 - Robson Vaamonde - Criação do arquivo de configuração envvars do Apache2 para corrigir a falha de PT-BR