@@ -1,9 +1,15 @@
 
 **************************************************************************
 ##########################################################################
-##             Acesso ao Servidor Remoto do PTI.INTRA                   ##
+##          Acesso ao Servidor Remoto utilizando o OpenSSH              ##
 ##########################################################################
 **************************************************************************
+	_____               _   _    _____   ______   _____    _   _   _ 
+	|  __ \      /\     | \ | |  / ____| |  ____| |  __ \  | | | | | |
+	| |  | |    /  \    |  \| | | |  __  | |__    | |__) | | | | | | |
+	| |  | |   / /\ \   | . ` | | | |_ | |  __|   |  _  /  | | | | | |
+	| |__| |  / ____ \  | |\  | | |__| | | |____  | | \ \  |_| |_| |_|
+	|_____/  /_/    \_\ |_| \_|  \_____| |______| |_|  \_\ (_) (_) (_)
 
 AVISO: O acesso nao autorizado a este sistema e proibido e sera processado
 conforme a lei.  Ao se conectar nesse sistema,  voce concorda que todas as
