@@ -4,78 +4,96 @@
 # Facebook: facebook.com/ProcedimentosEmTI
 # Facebook: facebook.com/BoraParaPratica
 # YouTube: youtube.com/BoraParaPratica
-# Data de criação: 22/07/2020
-# Data de atualização: 06/05/2021
-# Versão: 0.04
-# Testado e homologado para a versão do Ubuntu Server 18.04.x LTS x64
-# Kernel >= 4.15.x
+# Linkedin: https://www.linkedin.com/in/robson-vaamonde-0b029028/
+# Instagram: https://www.instagram.com/procedimentoem/?hl=pt-br
+# Data de criação: 17/01/2022
+# Data de atualização: 17/01/2022
+# Versão: 0.02
+# Testado e homologado para a versão do Ubuntu Server 20.04.x LTS x64
 
-#Configuração da Placa de Rede no GNU/Linux Ubuntu 18.04.x LTS
-#UDEV controlado pelo Systemd nomeando as Placas de Rede
-#Site: https://netplan.io/examples
+# Configuração da Placa de Rede no GNU/Linux Ubuntu 20.04.x LTS
+# UDEV (userspace /dev) responsável por controlar os dispositivos do
+# sistema utilizando o Systemd para nomear as Placas de Rede no Ubuntu
+# Site: https://netplan.io/examples
 
-#Verificando os dispositivos PCI de placa de rede instalados
-#opções do comando lspci: -v (verbose), -s (show)
-#opção do comando grep: -i (ignore-case)
+# Verificando os dispositivos PCI de Placa de Rede instalados
+# opções do comando lspci: -v (verbose), -s (show)
+# opção do comando grep: -i (ignore-case)
 sudo lspci -v | grep -i ethernet
 sudo lcpci -v -s 00:03.0
 
-#Verificando os detalhes do hardware de placa de rede instalada
+# Verificando os detalhes do hardware de Placa de Rede instalada
 sudo lshw -class network
 sudo lshw -class network | grep "logical name"
 
-#Verificando as configurações de endereçamento da placa de rede instalada
-#opção do comando ifconfig: -a (all)
+# Verificando as configurações de endereçamento da Placa de Rede instalada
+# opção do comando ifconfig: -a (all)
 sudo ifconfig -a
 sudo ip address
 
-#Verificando as configurações de gateway (route)
-#opção do comando route: -n (number)
+# Verificando as configurações de Gateway (route)
+# opção do comando route: -n (number)
 sudo route -n
 sudo ip route
 
-#Verificando as configurações de DNS (resolução de nomes)
+# Verificando as configurações dos Servidores DNS (resolução de nomes)
+# OBSERVAÇÃO: no Ubuntu Server não é mais utilizado o arquivo resolv.conf como
+# sendo o arquivo principal de configuração dos Servidores DNS do sistema
 sudo cat /etc/resolv.conf
 
-#Verificando as informações de cache de DNS (resolução de nomes)
+# Verificando as informações de cache dos Servidores DNS (resolução de nomes)
 sudo systemd-resolve --status
 sudo systemd-resolve --statistics
 
-#Não se utiliza mais os comandos ifdown e ifup
+# Não se utiliza mais os comandos ifdown e ifup para desligar os ligar as placas
+# de rede no Ubuntu Server, utilizamos os comandos ifconfig ou ip para isso
 sudo ifdown enp0s3
 sudo ifup enp0s3
 
-#Opção ifconfig down e up ainda e utilizado e do ip link set
+# Opção ifconfig down e up ainda e utilizado para depende do pacote net-tool
+# seja instalado no sistema, o comando ip link set é o padrão do Ubuntu Server
 sudo ifconfig enp0s3 down
 sudo ifconfig enp0s3 up
 sudo ip link set enp0s3 down
 sudo ip link set enp0s3 up
 
-#Diretório de configuração da placa de rede
+# Diretório padrão das configurações da Placa de Rede no Ubuntu Server
 cd /etc/netplan/
 
-#Instalando as dependências das Interfaces
-sudo apt install bridge-utils ifenslave
+# Instalando as dependências das Interfaces de Rede (Placa de Rede)
+sudo apt install bridge-utils ifenslave net-tools
 
-#Arquivos de configurações da placa de rede
-/etc/netplan/50-cloud-init.yaml
-/etc/netplan/00-installer-config.yaml
+# Arquivos de configuração da Placa de Rede no Ubuntu Server utilizando
+# o Netplan. OBSERVAÇÃO: o nome do arquivo pode mudar dependendo da versão
+# do Ubuntu Server.
+/etc/netplan/50-cloud-init.yaml #Padrão Ubuntu Server 18.04.x LTS
+/etc/netplan/00-installer-config.yaml #Padrão Ubuntu Server 20.04.x LTS
 
-#Configuração do endereçamento IPv4 Dynamic (Dinâmico)
+# OBSERVAÇÃO IMPORTANTE: o arquivo de configuração o Netplan e baseado no
+# formato de serialização de dados legíveis YAML (Yet Another Markup Language)
+# utilizado pelo linguagem de programação Python, muito cuidado com espaços e
+# tabulação e principalmente sua indentação.
+
+# Configuração do endereçamento IPv4 Dynamic (Dinâmico)
 network:
 	ethernets:
 		enp0s3:
 			dhcp4: true
 	version: 2
 	
-#Aplicando as configurações e verificando os status
+# Aplicando as configurações e verificando o status da Placa de Rede
 sudo netplan --debug try
 sudo netplan --debug apply
 sudo netplan ip leases enp0s3
 sudo systemd-resolve --status
 sudo ifconfig enp0s3
+sudo ip address show enp3s0 
+sudo route -n
+sudo ip route
 
-#Configuração do endereçamento IPv4 Static (Estático)
+# Configuração do endereçamento IPv4 Static (Estático)
+# Configuração do Endereço IPv4 e dos Servidores de DNS na mesma linha
+# utilizando os [] (Colchetes)
 network:
 	ethernets:
 		enp0s3:
@@ -87,13 +105,18 @@ network:
 				search: [pti.intra]
 	version: 2
 
-#Aplicando as configurações e verificando os status
+# Aplicando as configurações e verificando o status da Placa de Rede
 sudo netplan --debug try
 sudo netplan --debug apply
 sudo systemd-resolve --status
 sudo ifconfig enp0s3
+sudo ip address show enp3s0 
+sudo route -n
+sudo ip route
 
-#Configuração do endereçamento IPv4 Static (Estático)
+# Configuração do endereçamento IPv4 Static (Estático)
+# Configuração do Endereço IPv4 e dos Servidores de DNS em linhas separadas
+# utilizando o - (traço/menos/hífen) utilizando a tabulação padrão do YAML
 network:
 	ethernets:
 		enp0s3:
@@ -110,13 +133,16 @@ network:
 				- pti.intra
 	version: 2
 
-#Aplicando as configurações e verificando os status
+# Aplicando as configurações e verificando o status da Placa de Rede
 sudo netplan --debug try
 sudo netplan --debug apply
 sudo systemd-resolve --status
 sudo ifconfig enp0s3
+sudo ip address show enp3s0 
+sudo route -n
+sudo ip route
 
-#Configurações de múltiplos endereços IP
+# Configurações de múltiplos endereços IPv4 Static (Estático)
 network:
 	ethernets:
 		enp0s3:
@@ -135,13 +161,16 @@ network:
 				- pti.intra
 	version: 2
 
-#Aplicando as configurações e verificando os status
+# Aplicando as configurações e verificando o status da Placa de Rede
 sudo netplan --debug try
 sudo netplan --debug apply
 sudo systemd-resolve --status
 sudo ifconfig enp0s3
+sudo ip address show enp3s0 
+sudo route -n
+sudo ip route
 
-#Configurações de múltiplos endereços de gateway
+# Configurações de múltiplos endereços de Gateway Padrão com custo igual
 network:
 	ethernets:
 		enp0s3:
@@ -169,17 +198,20 @@ network:
          		metric: 100
 	version: 2
 
-#Aplicando as configurações e verificando os status
+# Aplicando as configurações e verificando o status da Placa de Rede
 sudo netplan --debug try
 sudo netplan --debug apply
 sudo systemd-resolve --status
 sudo ifconfig enp0s3
+sudo ip address show enp3s0
+sudo route -n
+sudo ip route
 
-#Configurações de bonds 802.3d com interface dinâmica
-#Obs: no Oracle VirtualBOX as Placas de Rede precisam está configuradas no modo
-#Conectado a: Placa de rede exclusiva de hospedeiro (host-only) - Nome: vboxnet0
-#Instalar o aplicativo: sudo apt update && sudo apt install ifenslave bridge-utils
-#Iniciar o módulo: sudo modprobe bonding 
+# Configurações de Bonds 802.3d com interface dinâmica
+# Obs: no Oracle VirtualBOX as Placas de Rede precisam está configuradas no modo
+# Conectado a: Placa de rede exclusiva de hospedeiro (host-only) - Nome: vboxnet0
+# Instalar o aplicativo: sudo apt update && sudo apt install ifenslave bridge-utils
+# Iniciar o módulo: sudo modprobe bonding 
 network:
 	ethernets:
 		enp0s3:
@@ -196,15 +228,18 @@ network:
 				mode: balance-rr
 	version: 2
 
-#Aplicando as configurações e verificando os status
+# Aplicando as configurações e verificando o status da Placa de Rede
 sudo netplan --debug try
 sudo netplan --debug apply
 sudo systemd-resolve --status
 sudo ifconfig bond0
+sudo ip address show bond0
+sudo route -n
+sudo ip route
 
-#Configurações de bonds 802.3d com interface estática
-#Obs: no Oracle VirtualBOX as Placas de Rede precisa está configurado o modo
-#Conectado a: Placa de rede exclusiva de hospedeiro (host-only) - Nome: vboxnet
+# Configurações de Bonds 802.3d com interface estática
+# Obs: no Oracle VirtualBOX as Placas de Rede precisa está configurado o modo
+# Conectado a: Placa de rede exclusiva de hospedeiro (host-only) - Nome: vboxnet
 network:
 	ethernets:
 		enp0s3:
@@ -227,13 +262,16 @@ network:
 				mode: balance-rr
 	version: 2
 
-#Aplicando as configurações e verificando os status
+# Aplicando as configurações e verificando o status da Placa de Rede
 sudo netplan --debug try
 sudo netplan --debug apply
 sudo systemd-resolve --status
 sudo ifconfig bond0
+sudo ip address show bond0
+sudo route -n
+sudo ip route
 
-#Configurações de bridges:
+# Configurações de Bridges com interface dinâmica
 network:
 	ethernets:
 		enp0s3:
@@ -245,13 +283,16 @@ network:
 				- enp0s3
 	version: 2
 
-#Aplicando as configurações e verificando os status
+# Aplicando as configurações e verificando o status da Placa de Rede
 sudo netplan --debug try
 sudo netplan --debug apply
 sudo systemd-resolve --status
 sudo ifconfig br0
+sudo ip address show br0
+sudo route -n
+sudo ip route
 
-#Configurações de vlans: 
+# Configurações de VLANs em interfaces como Bonds e endereço estático
 network:
 	vlans:
         inet:
@@ -264,12 +305,16 @@ network:
                 addresses: [172.16.1.254,8.8.8.8,8.8.4.4]
 	version: 2
 
-#Aplicando as configurações e verificando os status
+# Aplicando as configurações e verificando o status da Placa de Rede
 sudo netplan --debug try
 sudo netplan --debug apply
 sudo systemd-resolve --status
+sudo ifconfig bond0
+sudo ip address show bond0
+sudo route -n
+sudo ip route
 
-#Configurações de Wi-Fi (Wireless) com IPv4 Estático:
+# Configurações de Wi-Fi (Wireless) com IPv4 Estático
 network:
 	wifis:
 		wlp4s0:
@@ -284,8 +329,11 @@ network:
 				password: "pti@2018"
 	version: 2
 
-#Aplicando as configurações e verificando os status
+# Aplicando as configurações e verificando o status da Placa de Rede
 sudo netplan --debug try
 sudo netplan --debug apply
 sudo systemd-resolve --status
 sudo ifconfig wlp4s0
+sudo ip address show wlp4s0
+sudo route -n
+sudo ip route
